[ux] Updated the style(s) of the Schedule.

--- a/public/index.html
+++ b/public/index.html
@@ -155,6 +155,165 @@ console.log("... It’s Computer SCIENCE.");
         </div>
       </div>
 
+     <div id="schedule" class="content">
+        <div class="subheader">
+          <h1>Schedule</h1>
+        </div>
+
+        <div class="schedule">
+          <table>
+          <thead>
+            <tr>
+              <th>Time</th><th>Monday, May 5th (Day 1)</th><th>Tuesday, May 6th (Day 2)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="break breakfast">
+              <td>8:00am</td><td><registration></registration></td><td><breakfast></breakfast></td>
+            </tr>
+            <tr>
+              <td>9:00am</td>
+              <td>
+              <img src="/img/speakers/jenn-schiffer.jpg" />
+                <talk>Sorting Algorithms in Javascript</talk>
+                <speaker><a href="http://twitter.com/jennschiffer" target="_blank">Jenn Schiffer</a></speaker>
+              </td>
+              <td><tbd></tbd></td>
+            </tr>
+            <tr>
+              <td>9:40am</td>
+              <td>
+                <img src="/img/speakers/trevor-landau.jpg" />
+                <talk>Anatomy of a Successful Module</talk>
+                <speaker><a href="http://twitter.com/trevor_landau" target="_blank">Trevor Landau</a></speaker>
+              </td>
+              <td><tbd></tbd></td>
+            </tr>
+            <tr>
+              <td>10:20am</td><td><tbd></tbd></td><td><tbd></tbd></td>
+            </tr>
+            <tr>
+              <td>11:00am</td>
+              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/alyssa-ravasio.jpg" />
+                <talk>Hacking Webforms with Phantom.js</talk>
+                <speaker><a href="http://twitter.com/alyraz" target="_blank">Alyssa Ravasio</a></speaker>
+              </td>
+            </tr>
+            <tr>
+              <td>11:40am</td>
+              <td>
+                <img src="/img/speakers/drew-petersen.jpg" />
+                <talk>Exploiting a Pocket Universe</talk>
+                <speaker><a href="http://twitter.com/KirbySaysHi" target="_blank">Drew Petersen</a></speaker>
+              </td>
+              <td>
+                <img src="/img/speakers/guillermo-rauch.jpg" />
+                <talk>MyDB</talk>
+                <speaker><a href="http://twitter.com/rauchg" target="_blank">Guillermo Rauch</a></speaker>
+              </td>
+            </tr>
+            <tr class="break lunch">
+              <td>12:10pm</td><td><lunch></lunch></td><td><lunch></lunch></td>
+            </tr>
+            <tr>
+              <td>1:10pm</td>
+              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/arnout-kazemier.jpg" />
+                <talk>BigPipe</talk>
+                <speaker><a href="http://twitter.com/3rdEden" target="_blank">Arnout Kazemier</a></speaker>
+              </td>
+            </tr>
+            <tr>
+              <td>1:50pm</td><td><tbd></tbd></td><td><tbd></tbd></td>
+            </tr>
+            <tr>
+             <td>2:30pm</td>
+             <td><tbd></tbd></td>
+             <td>
+                <img src="/img/speakers/john-resig.jpg" />
+                <talk>Hacking Art with Node.js and Image Analysis</talk>
+                <speaker><a href="http://twitter.com/jeresig" target="_blank">John Resig</a></speaker>
+              </td>
+            </tr>
+            <tr class="break coffee">
+              <td>3:00pm</td><td><coffee></coffee></td><td><coffee></coffee></td>
+            </tr>
+            <tr>
+              <td>3:30pm</td>
+              <td>
+                <img src="/img/speakers/mark-wunsch.jpg" />
+                <talk>Front-end Style Guides and Greenfields</talk>
+                <speaker><a href="http://twitter.com/markwunsch" target="_blank">Mark Wunsch</a></speaker>
+              </td>
+              <td><tbd></tbd></td>
+            </tr>
+            <tr>
+              <td>4:10pm</td>
+              <td>
+                <img src="/img/speakers/eric-shepherd.jpg" />
+                <talk>Gadgets for Holistic Web Detection</talk>
+                <speaker><a href="http://twitter.com/arkitrave" target="_blank">Eric Shepherd</a></speaker>
+              </td>
+              <td><tbd></tbd></td>
+            </tr>
+            <tr>
+              <td>4:50pm</td>
+              <td>
+                <img src="/img/speakers/amjad-masad.jpg" />
+                <talk>Lesser Known Debugging Techniques</talk>
+                <speaker>
+                  <a href="http://twitter.com/amasad" target="_blank">Amjad Masad</a>
+                </speaker>
+              </td>
+              <td><tbd></tbd></td>
+            </tr>
+            <tr>
+              <td>5:30pm</td>
+              <td>
+                <img src="/img/speakers/vince-allen.jpg" />
+                <talk>Pixel Art in Javascript</talk>
+                <speaker>
+                  <a href="http://twitter.com/foldi" target="_blank">Vince Allen</a>
+                </speaker>
+              </td>
+              <td><tbd></tbd></td>
+            </tr>
+            <tr class="break party">
+              <td>6:00pm</td>
+              <td>
+                <party>
+                  Statue of Liberty Cruise <br/>
+                  <em>(Dinner &amp; Drinks provided on-board</em>
+                </party>
+              </td>
+              <td>
+                <party>
+                  Closing Party at LightBox with <br/>
+                  <em>programmable walls.</em>
+                </party>
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td>Sponsored by <img src="img/sponsors/bloomberg.png" alt="Bloomberg" /></td>
+            </tr>
+          </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div id="love" class="content">
+        <div class="subheader">
+          <h1>NYC = No Yutzes Central</h1>
+        </div>
+
+        By attending EmpireJS you agree not to be <a style="text-decoration: underline" href="http://www.urbandictionary.com/define.php?term=yutz">a yutz.</a> Harassment of any kind will not be tolerated. We'd like to thank our friends at JSConf for the longer, less yiddish filled <a style="text-decoration: underline" href="http://jsconf.com/codeofconduct.html">Code of Conduct</a> we happily uphold.
+      </div>
+
       <div id="sponsors" class="content">
         <div class="subheader">
           <h1>Sponsors</h1>
@@ -174,149 +333,6 @@ console.log("... It’s Computer SCIENCE.");
           <a href="http://work-bench.com/" target="_blank"><img width="250" src="img/sponsors/work-bench.png" alt /></a>
         </div>
       </div>
-
-      <div id="schedule" class="content">
-        <div class="subheader">
-          <h1>Schedule</h1>
-        </div>
-
-        <div class="schedule">
-          <table>
-          <thead>
-            <tr><th>Time</th><th>Monday (Day 1)</th><th>Tuesday (Day 2)</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>800</td><td><registration></registration></td><td><breakfast></breakfast></td>
-            </tr>
-            <tr>
-              <td>900</td>
-              <td>
-              <img src="/img/speakers/jenn-schiffer.jpg" />
-                <talk>Sorting Algorithms in Javascript</talk>
-                <speaker><a href="http://twitter.com/jennschiffer" target="_blank">Jenn Schiffer</a></speaker>
-              </td>
-              <td><tbd></tbd></td>
-            </tr>
-            <tr>
-              <td>940</td>
-              <td>
-                <img src="/img/speakers/trevor-landau.jpg" />
-                <talk>Anatomy of a Successful Module</talk>
-                <speaker><a href="http://twitter.com/trevor_landau" target="_blank">Trevor Landau</a></speaker>
-              </td>
-              <td><tbd></tbd></td>
-            </tr>
-            <tr>
-              <td>1020</td><td><tbd></tbd></td><td><tbd></tbd></td>
-            </tr>
-            <tr>
-              <td>1100</td>
-              <td><tbd></tbd></td>
-              <td>
-                <img src="/img/speakers/alyssa-ravasio.jpg" />
-                <talk>Hacking Webforms with Phantom.js</talk>
-                <speaker><a href="http://twitter.com/alyraz" target="_blank">Alyssa Ravasio</a></speaker>
-              </td>
-            </tr>
-            <tr>
-              <td>1140</td>
-              <td>
-                <img src="/img/speakers/drew-petersen.jpg" />
-                <talk>Exploiting a Pocket Universe</talk>
-                <speaker><a href="http://twitter.com/KirbySaysHi" target="_blank">Drew Petersen</a></speaker>
-              </td>
-              <td>
-                <img src="/img/speakers/guillermo-rauch.jpg" />
-                <talk>MyDB</talk>
-                <speaker><a href="http://twitter.com/rauchg" target="_blank">Guillermo Rauch</a></speaker>
-              </td>
-            </tr>
-            <tr>
-               <td>1210</td><td><lunch></lunch></td><td><lunch></lunch></td>
-            </tr>
-            <tr>
-              <td>1310</td>
-              <td><tbd></tbd></td>
-              <td>
-                <img src="/img/speakers/arnout-kazemier.jpg" />
-                <talk>BigPipe</talk>
-                <speaker><a href="http://twitter.com/3rdEden" target="_blank">Arnout Kazemier</a></speaker>
-              </td>
-            </tr>
-            <tr>
-               <td>1350</td><td><tbd></tbd></td><td><tbd></tbd></td>
-            </tr>
-            <tr>
-               <td>1430</td>
-               <td><tbd></tbd></td>
-               <td>
-                  <img src="/img/speakers/john-resig.jpg" />
-                  <talk>Hacking Art with Node.js and Image Analysis</talk>
-                  <speaker><a href="http://twitter.com/jeresig" target="_blank">John Resig</a></speaker>
-                </td>
-            </tr>
-            <tr>
-               <td>1500</td><td><coffee></coffee></td><td><coffee></coffee></td>
-            </tr>
-            <tr>
-                <td>1530</td>
-                <td>
-                  <img src="/img/speakers/mark-wunsch.jpg" />
-                  <talk>Front-end Style Guides and Greenfields</talk>
-                  <speaker><a href="http://twitter.com/markwunsch" target="_blank">Mark Wunsch</a></speaker>
-                </td>
-                <td><tbd></tbd></td>
-            </tr>
-            <tr>
-                <td>1610</td>
-                <td>
-                  <img src="/img/speakers/eric-shepherd.jpg" />
-                  <talk>Gadgets for Holistic Web Detection</talk>
-                  <speaker><a href="http://twitter.com/arkitrave" target="_blank">Eric Shepherd</a></speaker>
-                </td>
-                <td><tbd></tbd></td>
-            </tr>
-            <tr>
-                <td>1650</td>
-                <td>
-                  <img src="/img/speakers/amjad-masad.jpg" />
-                  <talk>Lesser Known Debugging Techniques</talk>
-                  <speaker>
-                    <a href="http://twitter.com/amasad" target="_blank">Amjad Masad</a>
-                  </speaker>
-                </td>
-                <td><tbd></tbd></td>
-            </tr>
-            <tr>
-                <td>1730</td>
-                <td>
-                  <img src="/img/speakers/vince-allen.jpg" />
-                  <talk>Pixel Art in Javascript</talk>
-                  <speaker><a href="http://twitter.com/foldi" target="_blank">Vince Allen</a></speaker>
-                </td>
-                <td><tbd></tbd></td>
-            </tr>
-            <tr>
-                <td>1800</td>
-                <td><party /></td>
-                <td></td>
-            </tr>
-          </tbody>
-          </table>
-        </div>
-      </div>
-
-
-      <div id="love" class="content">
-        <div class="subheader">
-          <h1>NYC = No Yutzes Central</h1>
-        </div>
-
-        By attending EmpireJS you agree not to be <a style="text-decoration: underline" href="http://www.urbandictionary.com/define.php?term=yutz">a yutz.</a> Harassment of any kind will not be tolerated. We'd like to thank our friends at JSConf for the longer, less yiddish filled <a style="text-decoration: underline" href="http://jsconf.com/codeofconduct.html">Code of Conduct</a> we happily uphold.
-      </div>
-
 
       <div class="contacts">
         <p>Made with &lt;3 in New York by:
