[fix doc] Minor copy changes.

--- a/public/index.html
+++ b/public/index.html
@@ -286,13 +286,13 @@ console.log("... It’s Computer SCIENCE.");
               <td>
                 <party>
                   Statue of Liberty Cruise <br/>
-                  <em>(Dinner &amp; Drinks provided on-board</em>
+                  <em>(Dinner &amp; Drinks provided on-board)</em>
                 </party>
               </td>
               <td>
                 <party>
-                  Closing Party at LightBox with <br/>
-                  <em>programmable walls.</em>
+                  Closing Party at LightBox <br/>
+                  <em>with programmable walls.</em>
                 </party>
               </td>
             </tr>
