[doc] Added Michelle

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... 13 more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>12</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -131,6 +131,11 @@ console.log("... It’s Computer SCIENCE.");
           <div>
             <a href="https://twitter.com/3rdeden" target="_blank">
               <img src="/img/speakers/arnout-kazemier.jpg" alt /><p>Arnout Kazemier</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://twitter.com/hazelcough" target="_blank">
+              <img src="/img/speakers/michelle-bu.jpg" alt /><p>Michelle Bu</p>
             </a>
           </div>
         </div>
@@ -248,7 +253,11 @@ console.log("... It’s Computer SCIENCE.");
                 <talk>Front-end Style Guides and Greenfields</talk>
                 <speaker><a href="http://twitter.com/markwunsch" target="_blank">Mark Wunsch</a></speaker>
               </td>
-              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/michelle-bu.jpg" />
+                <talk>Realtime with WebRTC</talk>
+                <speaker><a href="http://twitter.com/hazelcough" target="_blank">Michelle Bu</a></speaker>
+              </td>
             </tr>
             <tr>
               <td>4:10pm</td>
