[doc] Updating Michelles talk, switching Vinces time, changing his Twitter handle

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@ console.log("... It’s Computer SCIENCE.");
             </a>
           </div>
           <div>
-            <a href="https://github.com/foldi" target="_blank">
+            <a href="https://github.com/vinceallenvince" target="_blank">
               <img src="/img/speakers/vince-allen.jpg" alt /><p>Vince Allen</p>
             </a>
           </div>
@@ -255,7 +255,7 @@ console.log("... It’s Computer SCIENCE.");
               </td>
               <td>
                 <img src="/img/speakers/michelle-bu.jpg" />
-                <talk>Realtime with WebRTC</talk>
+                <talk>WebRTC can be easy</talk>
                 <speaker><a href="http://twitter.com/hazelcough" target="_blank">Michelle Bu</a></speaker>
               </td>
             </tr>
@@ -281,14 +281,14 @@ console.log("... It’s Computer SCIENCE.");
             </tr>
             <tr>
               <td>5:30pm</td>
+              <td><tbd></tbd></td>
               <td>
                 <img src="/img/speakers/vince-allen.jpg" />
-                <talk>Pixel Art in Javascript</talk>
+                <talk>Pixel Art and Javascript</talk>
                 <speaker>
-                  <a href="http://twitter.com/foldi" target="_blank">Vince Allen</a>
+                  <a href="http://twitter.com/vinceallenvince" target="_blank">Vince Allen</a>
                 </speaker>
               </td>
-              <td><tbd></tbd></td>
             </tr>
             <tr class="break party">
               <td>6:00pm</td>
