[doc] Adding Domenic Denicola

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>12</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>11</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -138,6 +138,11 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/michelle-bu.jpg" alt /><p>Michelle Bu</p>
             </a>
           </div>
+          <div>
+            <a href="https://twitter.com/domenic" target="_blank">
+              <img src="/img/speakers/domenic-denicola.jpg" alt /><p>Domenic Denicola</p>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -195,7 +200,13 @@ console.log("... It’s Computer SCIENCE.");
               <td><tbd></tbd></td>
             </tr>
             <tr>
-              <td>10:20am</td><td><tbd></tbd></td><td><tbd></tbd></td>
+              <td>10:20am</td>
+              <td>
+                <img src="/img/speakers/domenic-denicola.jpg" />
+                <talk>The Final Frontier</talk>
+                <speaker><a href="http://twitter.com/domenic" target="_blank">Domenic Denicola</a></speaker>
+              </td>
+              <td><tbd></tbd></td>
             </tr>
             <tr>
               <td>11:00am</td>
