[doc] Adding Peter Müller

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>11</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>10</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -141,6 +141,11 @@ console.log("... It’s Computer SCIENCE.");
           <div>
             <a href="https://twitter.com/domenic" target="_blank">
               <img src="/img/speakers/domenic-denicola.jpg" alt /><p>Domenic Denicola</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://twitter.com/_munter_" target="_blank">
+              <img src="/img/speakers/peter-muller.jpg" alt /><p>Peter Müller</p>
             </a>
           </div>
         </div>
@@ -247,7 +252,11 @@ console.log("... It’s Computer SCIENCE.");
             </tr>
             <tr>
              <td>2:30pm</td>
-             <td><tbd></tbd></td>
+             <td>
+                <img src="/img/speakers/peter-muller.jpg" />
+                <talk>The no build system build system</talk>
+                <speaker><a href="http://twitter.com/_munter_" target="_blank">Peter Müller</a></speaker>
+             </td>
              <td>
                 <img src="/img/speakers/john-resig.jpg" />
                 <talk>Hacking Art with Node.js and Image Analysis</talk>
