[doc fix] Update link and headshot for @alyraz

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@ console.log("... It’s Computer SCIENCE.");
             </a>
           </div>
           <div>
-            <a href="https://github.com/alyraz" target="_blank">
+            <a href="https://twitter.com/alyraz" target="_blank">
               <img src="/img/speakers/alyssa-ravasio.jpg" alt /><p>Alyssa Ravasio</p>
             </a>
           </div>
