[doc] Addding Kassandra Perch

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>10</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>9</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -148,6 +148,11 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/peter-muller.jpg" alt /><p>Peter Müller</p>
             </a>
           </div>
+          <div>
+            <a href="https://twitter.com/kassandra_perch" target="_blank">
+              <img src="/img/speakers/kassandra-perch.jpg" alt /><p>Kassandra Perch</p>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -215,7 +220,11 @@ console.log("... It’s Computer SCIENCE.");
             </tr>
             <tr>
               <td>11:00am</td>
-              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/kassandra-perch.jpg" />
+                <talk>BeagleBone Black: The versatile JS underdog</talk>
+                <speaker><a href="http://twitter.com/kassandra_perch" target="_blank">Kassandra Perch</a></speaker>
+              </td>
               <td>
                 <img src="/img/speakers/alyssa-ravasio.jpg" />
                 <talk>Hacking Webforms with Phantom.js</talk>
