--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>9</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>8</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -151,6 +151,11 @@ console.log("... It’s Computer SCIENCE.");
           <div>
             <a href="https://twitter.com/kassandra_perch" target="_blank">
               <img src="/img/speakers/kassandra-perch.jpg" alt /><p>Kassandra Perch</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://twitter.com/thebyrd" target="_blank">
+              <img src="/img/speakers/david-byrd.jpg" alt /><p>David Byrd</p>
             </a>
           </div>
         </div>
@@ -310,7 +315,14 @@ console.log("... It’s Computer SCIENCE.");
             </tr>
             <tr>
               <td>5:30pm</td>
-              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/david-byrd.jpg" />
+                <talk>Code Memes</talk>
+                <speaker>
+                  <a href="http://twitter.com/thebyrd" target="_blank">David Byrd</a>
+                </speaker>
+              </td>
+
               <td>
                 <img src="/img/speakers/vince-allen.jpg" />
                 <talk>Pixel Art and Javascript</talk>
