[doc] Adding Daniel Cousineau

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>8</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>7</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -156,6 +156,11 @@ console.log("... It’s Computer SCIENCE.");
           <div>
             <a href="https://twitter.com/thebyrd" target="_blank">
               <img src="/img/speakers/david-byrd.jpg" alt /><p>David Byrd</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://twitter.com/dcousineau" target="_blank">
+              <img src="/img/speakers/daniel-cousineau.jpg" alt /><p>Daniel Cousineau</p>
             </a>
           </div>
         </div>
@@ -262,7 +267,12 @@ console.log("... It’s Computer SCIENCE.");
               </td>
             </tr>
             <tr>
-              <td>1:50pm</td><td><tbd></tbd></td><td><tbd></tbd></td>
+              <td>1:50pm</td>
+              <td>
+                <img src="/img/speakers/daniel-cousineau.jpg" />
+                <talk>Backbone.Marionette and RequireJS</talk>
+                <speaker><a href="http://twitter.com/dcousineau" target="_blank">Daniel Cousineau</a></speaker>
+              </td><td><tbd></tbd></td>
             </tr>
             <tr>
              <td>2:30pm</td>
