[doc] Adding Tom Dale

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>7</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>6</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -161,6 +161,11 @@ console.log("... It’s Computer SCIENCE.");
           <div>
             <a href="https://twitter.com/dcousineau" target="_blank">
               <img src="/img/speakers/daniel-cousineau.jpg" alt /><p>Daniel Cousineau</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://twitter.com/tomdale" target="_blank">
+              <img src="/img/speakers/tom-dale.jpg" alt /><p>Tom Dale</p>
             </a>
           </div>
         </div>
@@ -259,7 +264,12 @@ console.log("... It’s Computer SCIENCE.");
             </tr>
             <tr>
               <td>1:10pm</td>
-              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/tom-dale.jpg" />
+                <talk>The Road to Web Components</talk>
+                <speaker><a href="http://twitter.com/tomdale" target="_blank">Tom Dale</a></speaker>
+
+              </td>
               <td>
                 <img src="/img/speakers/arnout-kazemier.jpg" />
                 <talk>BigPipe</talk>
