[doc] Adding Sean McCullough

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>6</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>5</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -166,6 +166,11 @@ console.log("... It’s Computer SCIENCE.");
           <div>
             <a href="https://twitter.com/tomdale" target="_blank">
               <img src="/img/speakers/tom-dale.jpg" alt /><p>Tom Dale</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://twitter.com/mcculloughsean" target="_blank">
+              <img src="/img/speakers/sean-mccullough.jpg" alt /><p>Sean McCullough</p>
             </a>
           </div>
         </div>
@@ -282,7 +287,12 @@ console.log("... It’s Computer SCIENCE.");
                 <img src="/img/speakers/daniel-cousineau.jpg" />
                 <talk>Backbone.Marionette and RequireJS</talk>
                 <speaker><a href="http://twitter.com/dcousineau" target="_blank">Daniel Cousineau</a></speaker>
-              </td><td><tbd></tbd></td>
+              </td>
+              <td>
+                <img src="/img/speakers/sean-mccullough.jpg" />
+                <talk>Transitioning Groupon to node.js</talk>
+                <speaker><a href="http://twitter.com/mcculloughsean" target="_blank">Sean McCullough</a></speaker>
+              </td>
             </tr>
             <tr>
              <td>2:30pm</td>
