[doc] Adding Clay Smith

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>5</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>4</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -173,6 +173,11 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/sean-mccullough.jpg" alt /><p>Sean McCullough</p>
             </a>
           </div>
+          <div>
+            <a href="https://twitter.com/smithclay" target="_blank">
+              <img src="/img/speakers/clay-smith.jpg" alt /><p>Clay Smith</p>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -214,11 +219,15 @@ console.log("... It’s Computer SCIENCE.");
             <tr>
               <td>9:00am</td>
               <td>
-              <img src="/img/speakers/jenn-schiffer.jpg" />
+                <img src="/img/speakers/jenn-schiffer.jpg" />
                 <talk>Sorting Algorithms in Javascript</talk>
                 <speaker><a href="http://twitter.com/jennschiffer" target="_blank">Jenn Schiffer</a></speaker>
               </td>
-              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/clay-smith.jpg" />
+                <talk>Build Artifacts in to Source Control</talk>
+                <speaker><a href="http://twitter.com/smithclay" target="_blank">Clay Smith</a></speaker>
+              </td>
             </tr>
             <tr>
               <td>9:40am</td>
