[doc] Fixing session title for Clay

--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,7 @@ console.log("... It’s Computer SCIENCE.");
               </td>
               <td>
                 <img src="/img/speakers/clay-smith.jpg" />
-                <talk>Build Artifacts in to Source Control</talk>
+                <talk>Build Artifacts in Source Control</talk>
                 <speaker><a href="http://twitter.com/smithclay" target="_blank">Clay Smith</a></speaker>
               </td>
             </tr>
