[doc] Adding Rick Waldron

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>4</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>3</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -178,6 +178,11 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/clay-smith.jpg" alt /><p>Clay Smith</p>
             </a>
           </div>
+          <div>
+            <a href="https://twitter.com/rwaldron" target="_blank">
+              <img src="/img/speakers/rick-waldron.jpg" alt /><p>Rick Waldron</p>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -245,7 +250,11 @@ console.log("... It’s Computer SCIENCE.");
                 <talk>The Final Frontier</talk>
                 <speaker><a href="http://twitter.com/domenic" target="_blank">Domenic Denicola</a></speaker>
               </td>
-              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/rick-waldron.jpg" />
+                <talk>Bits of Nodebots.Next</talk>
+                <speaker><a href="http://twitter.com/rwaldron" target="_blank">Rick Waldron</a></speaker>
+              </td>
             </tr>
             <tr>
               <td>11:00am</td>
