[doc] Adding Kirill & Tsering

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>3</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>2</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -181,6 +181,16 @@ console.log("... It’s Computer SCIENCE.");
           <div>
             <a href="https://twitter.com/rwaldron" target="_blank">
               <img src="/img/speakers/rick-waldron.jpg" alt /><p>Rick Waldron</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://twitter.com/z6Dabrata" target="_blank">
+              <img src="/img/speakers/kirill-cherkashin.jpg" alt /><p>Kirill Cherkashin</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://twitter.com/ustamansangat" target="_blank">
+              <img src="/img/speakers/tsering-shrestha.jpg" alt /><p>Tsering Shrestha</p>
             </a>
           </div>
         </div>
@@ -348,7 +358,15 @@ console.log("... It’s Computer SCIENCE.");
                 <talk>Gadgets for Holistic Web Detection</talk>
                 <speaker><a href="http://twitter.com/arkitrave" target="_blank">Eric Shepherd</a></speaker>
               </td>
-              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/kirill-cherkashin.jpg" />
+                <img src="/img/speakers/tsering-shrestha.jpg" />
+                <talk>The hidden benefits of static analysis</talk>
+                <speaker>
+                  <a href="http://twitter.com/z6Dabrata" target="_blank">Kirill Cherkashin</a>
+                  <a href="http://twitter.com/ustamansangat" target="_blank">Tsering Shrestha</a>
+                </speaker>
+              </td>
             </tr>
             <tr>
               <td>4:50pm</td>
