[doc] Adding Jeremy Stashewsky

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... <strong>2</strong> more to be announced. <strong>One every day!</strong></p>
+            <p>... <strong>1</strong> more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -193,6 +193,11 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/tsering-shrestha.jpg" alt /><p>Tsering Shrestha</p>
             </a>
           </div>
+          <div>
+            <a href="https://twitter.com/jstash" target="_blank">
+              <img src="/img/speakers/jeremy-stashewsky.jpg" alt /><p>Jeremy Stashewsky</p>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -251,7 +256,11 @@ console.log("... It’s Computer SCIENCE.");
                 <talk>Anatomy of a Successful Module</talk>
                 <speaker><a href="http://twitter.com/trevor_landau" target="_blank">Trevor Landau</a></speaker>
               </td>
-              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/jeremy-stashewsky.jpg" />
+                <talk>Preventing XSS &amp; CSRF</talk>
+                <speaker><a href="http://twitter.com/jstash" target="_blank">Jeremy Stashewsky</a></speaker>
+              </td>
             </tr>
             <tr>
               <td>10:20am</td>
