[dist] Version bump. 1.5.16

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>EmpireJS</title>
     <meta name="description" content="Two-days. One-track. May 5-6 in New York City. All Javascript. Tickets on Sale Now!">
     <meta name="viewport" content="width=device-width">
+    <meta name="google-site-verification" content="B7uTd8p2GMErJIaMRa8PmwpRa2rVvUA2YCXqOH4fJIU" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/reset.css">
