[doc] Added The Ladders as a sponsor.

--- a/public/index.html
+++ b/public/index.html
@@ -443,6 +443,7 @@ console.log("... It’s Computer SCIENCE.");
           <a href="http://bazaarvoice.com/" target="_blank"><img width="136" src="img/sponsors/bazaarvoice.png" alt /></a>
           <a href="http://etsy.com/" target="_blank"><img width="300" src="img/sponsors/etsy.png" alt /></a>
           <a href="http://automattic.com/" target="_blank"><img width="400" src="img/sponsors/automattic.png" alt /></a>
+          <a href="http://theladders.com/" target="_blank"><img width="300" src="img/sponsors/theladders.png" alt /></a>
 
           <a href="http://digitalocean.com/" target="_blank"><img width="400" src="img/sponsors/digitalocean.png" alt /></a>
           <a href="http://saucelabs.com/" target="_blank"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
