[doc] Adding Ben Newman

--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,6 @@ console.log("... It’s Computer SCIENCE.");
       <div id="speakers" class="content">
         <div class="subheader">
           <h1>Speakers</h1>
-          <div style="text-align: right">
-            <p>... <strong>1</strong> more to be announced. <strong>One every day!</strong></p>
-          </div>
         </div>
 
         <div class="speakers">
@@ -199,6 +196,12 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/jeremy-stashewsky.jpg" alt /><p>Jeremy Stashewsky</p>
             </a>
           </div>
+          <div>
+            <a href="https://twitter.com/benjamn" target="_blank">
+              <img src="/img/speakers/ben-newman.jpg" alt /><p>Ben Newman</p>
+            </a>
+          </div>
+
         </div>
       </div>
 
@@ -387,7 +390,13 @@ console.log("... It’s Computer SCIENCE.");
                   <a href="http://twitter.com/amasad" target="_blank">Amjad Masad</a>
                 </speaker>
               </td>
-              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/ben-newman.jpg" />
+                <talk>ES6</talk>
+                <speaker>
+                  <a href="http://twitter.com/benjamn" target="_blank">Ben Newman</a>
+                </speaker>
+              </td>
             </tr>
             <tr>
               <td>5:30pm</td>
