[doc] Updating Ben's talk

--- a/public/index.html
+++ b/public/index.html
@@ -392,7 +392,7 @@ console.log("... It’s Computer SCIENCE.");
               </td>
               <td>
                 <img src="/img/speakers/ben-newman.jpg" />
-                <talk>ES6</talk>
+                <talk>Easing into ECMAScript 6 and Beyond</talk>
                 <speaker>
                   <a href="http://twitter.com/benjamn" target="_blank">Ben Newman</a>
                 </speaker>
