[doc] Added latest sponsors.

--- a/public/index.html
+++ b/public/index.html
@@ -447,18 +447,20 @@ console.log("... It’s Computer SCIENCE.");
         </div>
 
         <div class="sponsors">
-          <a href="http://bloomberg.com/" target="_blank"><img width="400" src="img/sponsors/bloomberg.png" alt /></a>
+          <a href="http://bloomberg.com/"  style="padding-bottom: 20px" target="_blank"><img width="400" src="img/sponsors/bloomberg.png" alt /></a>
           <a href="http://condenast.com/" target="_blank"><img width="400" src="img/sponsors/condenast.png" alt /></a>
           <a href="http://bazaarvoice.com/" target="_blank"><img width="136" src="img/sponsors/bazaarvoice.png" alt /></a>
           <a href="http://etsy.com/" target="_blank"><img width="300" src="img/sponsors/etsy.png" alt /></a>
           <a href="http://automattic.com/" target="_blank"><img width="400" src="img/sponsors/automattic.png" alt /></a>
           <a href="http://theladders.com/" target="_blank"><img width="300" src="img/sponsors/theladders.png" alt /></a>
-
+          <a href="http://palantir.com/" target="_blank"><img width="350" src="img/sponsors/palantir.png" alt /></a>
           <a href="http://digitalocean.com/" target="_blank"><img width="400" src="img/sponsors/digitalocean.png" alt /></a>
           <a href="http://saucelabs.com/" target="_blank"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
-          <a href="http://spotify.com/" target="_blank"><img width="300" src="img/sponsors/spotify.png" alt /></a>
-          <a href="http://nytimes.com/" target="_blank"><img width="250" src="img/sponsors/nytimes.png" alt /></a>
-          <a href="http://work-bench.com/" target="_blank"><img width="250" src="img/sponsors/work-bench.png" alt /></a>
+          <a href="http://spotify.com/" style="padding-bottom: 20px" target="_blank"><img width="300" src="img/sponsors/spotify.png" alt /></a>
+          <a href="http://mozilla.org/" target="_blank"><img width="300" src="img/sponsors/mozilla.png" alt /></a>
+          <a href="http://nytimes.com/" style="padding-bottom: 20px" target="_blank"><img width="250" src="img/sponsors/nytimes.png" alt /></a>
+          <a href="http://work-bench.com/" style="padding-bottom: 0" target="_blank"><img width="250" src="img/sponsors/work-bench.png" alt /></a>
+          <a href="http://yld.io/" target="_blank"><img width="150" src="img/sponsors/yld.png" alt /></a>
         </div>
       </div>
 
